# snapper

./: .prettierignore  .prettierrc  README.md  index.html  package-lock.json  package.json
.github/workflows/: release-build.yml  release.yml  test.yml  update-binaries.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: download_binaries.ps1  download_binaries.sh
src-tauri/src/: commands.rs  lib.rs  main.rs  youtube.rs
src/components/: theme-provider.tsx
src/components/ui/: input.tsx  tabs.tsx
src/lib/: tauri-api.ts
